Make table auto creation behavior more consistent